# talk-kedro-polars

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Initial Exploration.ipynb  README.md  data_filtering.ipynb  data_processing.ipynb  data_science.ipynb  dev-requirements.txt  pyproject.toml  requirements.txt
conf/base/: catalog.yml  logging.yml
conf/base/parameters/: data_processing.yml
data/01_raw/: README.md
docs/source/: conf.py  index.rst
notebooks/: Initial Exploration.ipynb  data_processing.ipynb  data_science.ipynb
src/: requirements.txt  setup.py
src/talk_kedro_polars/: __init__.py  __main__.py  settings.py
src/talk_kedro_polars/pipelines/data_processing/: README.md  __init__.py  nodes.py  pipeline.py
src/tests/: test_run.py
src/tests/pipelines/data_processing/: test_pipeline.py
